--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ mysql-connector-python==8.0.15
 
 flask_jwt_extended==3.18.1
 passlib==1.7.1
+
+graphene==2.1.3
+Flask-GraphQL==2.0
+graphene-sqlalchemy==2.1.2
