--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  web:
+  needoff:
     build: .
     ports:
       - "3344:3344"
@@ -11,8 +11,3 @@ services:
     volumes:
       - .:/app
       - ./db:/db
-    networks:
-      - needoff-net
-
-networks:
-  needoff-net:
