--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
 flask==1.0.2
+sanic==19.3.1
 
 sqlalchemy==1.3.3
-flask_sqlalchemy==2.3.2
 
-flask_jwt_extended==3.18.1
+sanic-jwt==1.3.1
 passlib==1.7.1
-
-graphene==2.1.3
-Flask-GraphQL==2.0
-graphene-sqlalchemy==2.1.2
+graphene[sqlalchemy]
+Sanic-GraphQL==1.1.0
